# real-time-RAG-chatbot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.ipynb
src/: app.py
src/models/: embedding_model.py  llm_model.py
src/storage/: document_processing.py  document_processor.py
test_dir/documents/: ai_agents_IBM.txt  ai_agents_gemini.txt  ai_agents_google.txt
