[project]
name = "real-time-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes",
    "chromadb",
    "dotenv>=0.9.9",
    "ipykernel",
    "llama-index",
    "llama-index-core",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-huggingface",
    "llama-index-vector-stores-chroma",
    "pandas",
    "pypdf",
    "sentence-transformers",
    "streamlit>=1.45.1",
    "transformers",
]
